added backend README and demonstation screenshots

--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
-MONGODB_URI = "mongodb+srv://admin:123password123@cluster0.p2mieei.mongodb.net"
-CLOUDINARY_API_KEY = "162541199767839"
-CLOUDINARY_SECRET_KEY = "pxTq-aEvcfE4odGsV4n43GaHjGM"
-CLOUDINARY_NAME = "dalb0loui"
-JWT_SECRET = "jackfolsom"
-ADMIN_EMAIL = "admin@email.com"
-ADMIN_PASSWORD = "password123"
+MONGODB_URI = "mongodb+srv://example:example@cluster0.example.mongodb.net"
+CLOUDINARY_API_KEY = "example"
+CLOUDINARY_SECRET_KEY = "example"
+CLOUDINARY_NAME = "example"
+JWT_SECRET = "example"
+ADMIN_EMAIL = "example@example.com"
+ADMIN_PASSWORD = "example"
